[package]
name = "rekordbox_fix"
description = "Minimal event sourcing components"
authors = ["Andrea Pavoni <andrea.pavoni@gmail.com>"]
version = "0.1.0"
repository = "https://github.com/andreapavoni/rekordbox_fix"
license = "MIT"
keywords = ["cqrs", "event-sourcing"]
rust-version = "1.67"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
chrono = { version = "0.4", features = ["serde"] }
